--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" id="nav-items" href="shop.html">HOME</a>
+          <a class="nav-link" id="nav-items" href="index.html">HOME</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="nav-items" href="#gallery">GALLERY</a>
