--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
          <div class="responsive">
           <div class="gallery">
            <a target="_blank" href="images/grapes.jpg">
-             <img src="imageS/grapes.jpg" alt="Cinque Terre" width="600" height="400">
+             <img src="imageS/grapes.jpg"  width="600" height="400">
            </a>
            <div class="desc" id="image-description">GRAPES</div>
           </div>
@@ -208,7 +208,7 @@
           <div class="responsive">
             <div class="gallery">
              <a target="_blank" href="images/pista.jfif">
-               <img src="imageS/pista.jfif" alt="Cinque Terre" width="600" height="400">
+               <img src="imageS/pista.jfif"  width="600" height="400">
              </a>
              <div class="desc" id="image-description">PISTACHIO</div>
             </div>
