--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" id="nav-items" href="index.html">HOME</a>
+          <a class="nav-link" id="nav-items" href="shop.html">HOME</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="nav-items" href="#gallery">GALLERY</a>
@@ -131,7 +131,7 @@
  <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/SATR.jpg">
-      <img src="images/SATR.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="images/SATR.jpg"  width="600" height="400">
     </a>
     <div class="desc" id="image-description">STAR ANISE</div>
   </div>
@@ -139,7 +139,7 @@
  <div class="responsive">
    <div class="gallery">
     <a target="_blank" href="images/WHITE-PAPPER.jpg">
-      <img src="images/WHITE-PAPPER.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="images/WHITE-PAPPER.jpg"  width="600" height="400">
     </a>
     <div class="desc" id="image-description">WHITE PAPPER</div>
    </div>
@@ -199,7 +199,7 @@
          <div class="responsive">
           <div class="gallery">
            <a target="_blank" href="images/grapes.jpg">
-             <img src="imageS/grapes.jpg"  width="600" height="400">
+             <img src="imageS/grapes.jpg" alt="Cinque Terre" width="600" height="400">
            </a>
            <div class="desc" id="image-description">GRAPES</div>
           </div>
@@ -208,7 +208,7 @@
           <div class="responsive">
             <div class="gallery">
              <a target="_blank" href="images/pista.jfif">
-               <img src="imageS/pista.jfif"  width="600" height="400">
+               <img src="imageS/pista.jfif" alt="Cinque Terre" width="600" height="400">
              </a>
              <div class="desc" id="image-description">PISTACHIO</div>
             </div>
