--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 
           <div class="responsive">
             <div class="gallery">
-             <a target="_blank" href="images/pista.jfif">
-               <img src="imageS/pista.jfif" alt="Cinque Terre" width="600" height="400">
+             <a target="_blank" href="images/pista.jpg">
+               <img src="imageS/pista.jpg" alt="Cinque Terre" width="600" height="400">
              </a>
              <div class="desc" id="image-description">PISTACHIO</div>
             </div>
