--- a/index.html
+++ b/index.html
@@ -180,7 +180,39 @@
         <div class="desc" id="image-description">CASHEW NUTS</div>
        </div>
        </div>
-     
+       <div class="responsive">
+        <div class="gallery">
+          <a target="_blank" href="images/black graoes'.jpg">
+            <img src="images/black graoes'.jpg" alt="Cinque Terre" width="600" height="400">
+          </a>
+          <div class="desc" id="image-description">BLACK-GRPAES</div>
+        </div>
+       </div>
+       <div class="responsive">
+         <div class="gallery">
+          <a target="_blank" href="images/badam.jpg">
+            <img src="images/badam.jpg" alt="Cinque Terre" width="600" height="400">
+          </a>
+          <div class="desc" id="image-description">ALMOND</div>
+         </div>
+         </div>
+         <div class="responsive">
+          <div class="gallery">
+           <a target="_blank" href="images/grapes.jpg">
+             <img src="imageS/grapes.jpg" alt="Cinque Terre" width="600" height="400">
+           </a>
+           <div class="desc" id="image-description">GRAPES</div>
+          </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+             <a target="_blank" href="images/pista.jfif">
+               <img src="imageS/pista.jfif" alt="Cinque Terre" width="600" height="400">
+             </a>
+             <div class="desc" id="image-description">PISTACHIO</div>
+            </div>
+            </div>
         
  
 </div>
