--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <a target="_blank" href="images/pepper.jpg">
       <img src="images/pepper.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
-    <div class="desc" id="image-description">BLACK PAPPER</div>
+    <div class="desc" id="image-description">BLACK PEPPER</div>
   </div>
  </div>
  <div class="responsive">
@@ -138,7 +138,7 @@
  </div>
  <div class="responsive">
    <div class="gallery">
-    <a target="_blank" href="images/WHITE-PAPPER.jpg">
+    <a target="_blank" href="images/WHITE-PEPPER.jpg">
       <img src="images/WHITE-PAPPER.jpg"  width="600" height="400">
     </a>
     <div class="desc" id="image-description">WHITE PAPPER</div>
@@ -185,7 +185,7 @@
           <a target="_blank" href="images/black graoes'.jpg">
             <img src="images/black graoes'.jpg" alt="Cinque Terre" width="600" height="400">
           </a>
-          <div class="desc" id="image-description">BLACK-GRPAES</div>
+          <div class="desc" id="image-description">BLACK-GRAPES</div>
         </div>
        </div>
        <div class="responsive">
@@ -208,7 +208,7 @@
           <div class="responsive">
             <div class="gallery">
              <a target="_blank" href="images/pista.jfif">
-               <img src="imageS/pista.jfif" alt="Cinque Terre" width="600" height="400">
+               <img src="imageS/pista.jpg" alt="Cinque Terre" width="600" height="400">
              </a>
              <div class="desc" id="image-description">PISTACHIO</div>
             </div>
