--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <a target="_blank" href="images/WHITE-PEPPER.jpg">
       <img src="images/WHITE-PAPPER.jpg"  width="600" height="400">
     </a>
-    <div class="desc" id="image-description">WHITE PAPPER</div>
+    <div class="desc" id="image-description">WHITE PEPPER</div>
    </div>
    </div>
 
