--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="responsive">
         <div class="gallery">
           <a target="_blank" href="images/black graoes'.jpg">
-            <img src="images/black graoes'.jpg" alt="Cinque Terre" width="600" height="400">
+            <img src="images/black graoes'.jpg" alt=" Terre" width="600" height="400">
           </a>
           <div class="desc" id="image-description">BLACK-GRAPES</div>
         </div>
@@ -207,7 +207,7 @@
        <div class="responsive">
          <div class="gallery">
           <a target="_blank" href="images/badam.jpg">
-            <img src="images/badam.jpg" alt="Cinque Terre" width="600" height="400">
+            <img src="images/badam.jpg" alt=" Terre" width="600" height="400">
           </a>
           <div class="desc" id="image-description">ALMOND</div>
          </div>
