--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
          </div>
       <div class="responsive">
         <div class="gallery">
-          <a target="_blank" href="images/black graoes'.jpg">
-            <img src="images/black graoes'.jpg" alt=" Terre" width="600" height="400">
+          <a target="_blank" href="images/HONEY.jpg">
+            <img src="images/grapes.jpg" alt=" Terre" width="600" height="400">
           </a>
           <div class="desc" id="image-description">BLACK-GRAPES</div>
         </div>
        </div>
        <div class="responsive">
          <div class="gallery">
-          <a target="_blank" href="images/badam.jpg">
-            <img src="images/badam.jpg" alt=" Terre" width="600" height="400">
+          <a target="_blank" href="images\HM.jpg">
+            <img src="images/HM.jpg" alt=" Terre" width="600" height="400">
           </a>
           <div class="desc" id="image-description">ALMOND</div>
          </div>
