--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
           <a target="_blank" href="images/HONEY.jpg">
             <img src="images/grapes.jpg" alt=" Terre" width="600" height="400">
           </a>
-          <div class="desc" id="image-description">BLACK-GRAPES</div>
+          <div class="desc" id="image-description">KISMIS</div>
         </div>
        </div>
        <div class="responsive">
          <div class="gallery">
-          <a target="_blank" href="images\HM.jpg">
-            <img src="images/HM.jpg" alt=" Terre" width="600" height="400">
+          <a target="_blank" href="images\pista.jpg">
+            <img src="images/pista.jpg" alt=" Terre" width="600" height="400">
           </a>
-          <div class="desc" id="image-description">ALMOND</div>
+          <div class="desc" id="image-description">PISTACHIO</div>
          </div>
          </div>
     
