--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 
-    The journey of RESPONSIBLE TOURISM SPICE SHOP starts back at 15 years ago. Our shop is managed by small team of passionate women entrepreneurs. Trip advisors authentically suggest us .<a href="https://www.tripadvisor.in/Travel-g297636-c178403/Thekkady:India:Shopping.In.Kumily.Thekkady.html"><ul>[ Trip-Adviser ]</ul></a>. <p  style="color: white;font-size: 20px;">We source our products directly from farmers so that you can experience the benefits of eating healthy. Spices in here run the gamut from the familiar Nutmeg & Kashmir Saffron to the less common Garam Masala and Turmeric which are great in preparing flavourful and intense dishes.
+    The journey of RESPONSIBLE TOURISM SPICE SHOP starts back at 15 years ago. Our shop is managed by small team of passionate women entrepreneurs. Trip advisors authentically suggest us .<a href="https://www.tripadvisor.in/Travel-g297636-c178403/Thekkady:India:Shopping.In.Kumily.Thekkady.html"><u>[Trip-Adviser]</u></a>. <p  style="color: white;font-size: 20px;">We source our products directly from farmers so that you can experience the benefits of eating healthy. Spices in here run the gamut from the familiar Nutmeg & Kashmir Saffron to the less common Garam Masala and Turmeric which are great in preparing flavourful and intense dishes.
 
 
            We provide exceptional products at a fair price all over India.<BR> We also offer other products which have been added to our portfolio based on interest from our loyal customers such as Homemade Chocolates , Coffee,Dry fruits,Flavored Tea. We also have different kinds of Hair oil,Massage oil, Pain relief oil,Eucalyptus oil with a blissful blend of Ayurveda & also variety of handmade bathing products.
