--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a class="active" href="index.html">home</a>
-  <a href="about.HTML">ABOUT</a>
+  <a href="about.html">ABOUT</a>
   <a href="contacts.html">contacts</a>
   <a href="list.html">list</a>
 </div>
