--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a  href="index.html">home</a>
-            <a  class="active" href="ABOUT.HTML">ABOUT</a>
+            <a  class="active" href="about.html">ABOUT</a>
             <a href="contacts.html">contacts</a>
             <a href="list.html">list</a>
           </div>
