--- a/about.html
+++ b/about.html
@@ -43,31 +43,31 @@
        </div>
     
        <div class="gallery">
-        <img  id="middle-img" src="gallery/1.jpg" height="800px" width="100px">
+        <img  id="middle-img" src="GALLERY/1.jpg" height="800px" width="100px">
        </div> 
        <div class="gallery">
-        <img id="middle-img" src="gallery/2.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/2.jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/3.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/3.jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/4.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/4.jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/5 (2).jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/5 (2).jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/6.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/6.jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/7.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/7.jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/GHVJKF.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/GHVJKF.jpg" height="800px" width="100px">
        </div>
        <div class="gallery">
-        <img id="middle-img" src="gallery/GJD.jpg" height="80px" width="100px">
+        <img id="middle-img" src="GALLERY/GJD.jpg" height="800px" width="100px">
        </div>  
     </div>
    
