--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
               <h4 class="phone"><a   class="fas fa-phone"></a><p class="number">9495773893</p> </h4>
               <h4 class="phone"><a   class="fas fa-phone"></a><p class="number">9656794143</p> </h4>
               <h4 class="mail"><a  class="fas fa-at"></a><p class="number">spicemarketthekkady@gmail.com</p> </h4>
-              <h4 class="phone"><a  class="fas fa-globe" href="https://goo.gl/maps/En85yhLgEcJj7Z8r9">Location</a></h4>
+              <h4 class="phone"><a  class="fas fa-globe" href="https://goo.gl/maps/En85yhLgEcJj7Z8r9"><u>Location</u></a></h4>
             </div>
 
 
