--- a/facial.html
+++ b/facial.html
@@ -17,7 +17,7 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a  href="index.html">home</a>
-            <a  href="ABOUT.HTML">ABOUT</a>
+            <a  href="about.html">ABOUT</a>
             <a  href="contacts.html">contacts</a>
             <a class="active" href="list.html">list</a>
           </div>
