--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <a  href="index.html">home</a>
             <a  class="active" href="about.html">ABOUT</a>
             <a href="contacts.html">contacts</a>
-            <a href="list.html">list</a>
+            <a href="list.html">items</a>
           </div>
           
           <span class="bar" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
