--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
             <a  href="index.html">home</a>
             <a  href="about.html">ABOUT</a>
             <a class="active" >contacts</a>
-            <a href="list.html">list</a>
+            <a href="list.html">items</a>
           </div>
           
           <span class="bar" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
