--- a/dryfruit.html
+++ b/dryfruit.html
@@ -19,7 +19,7 @@
             <a  href="index.html".html">home</a>
             <a  href="about.html">ABOUT</a>
             <a  href="contacts.html">contacts</a>
-            <a class="active" href="list.html">list</a>
+            <a class="active" href="list.html">items</a>
           </div>
           
           <span class="bar" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
