--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a class="active" href="index.html">home</a>
   <a href="about.html">ABOUT</a>
   <a href="contacts.html">contacts</a>
-  <a href="list.html">list</a>
+  <a href="list.html">items</a>
 </div>
 
 <span class="bar" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
