--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
 
 
+<div class="whatsapp">
+  
+   <h5> <a href="https://wa.link/m5gqp3" ><img src="images/4-2-whatsapp-transparent.png" class="whatsapplogo"></a></h5>
+</div>
+
 
 
 
