--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <div class="whatsapp">
   
-   <h5> <a href="https://wa.link/m5gqp3" style="text-decoration: none;" ><img src="images/4-2-whatsapp-transparent.png" class="whatsapplogo" ></a></h5>
+   <h5> <a href="https://wa.link/m5gqp3" style="text-decoration: none;" ><img src="images/4-2-whatsapp-transparent.png" class="whatsapplogo"  style="text-decoration: none;" ></a></h5>
 </div>
 
 
