--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                <img src="SLIDER IMGES/2.jpg" class="d-block w-100" alt="...">
              </div>
              <div class="carousel-item">
-               <img src="SLIDER IMGES/3.jpg class="d-block w-100" alt="...">
+               <img src="SLIDER IMGES/3.jpg" class="d-block w-100" alt="...">
              </div>
              <div class="carousel-item">
                <img src="SLIDER IMGES/4.jpg" class="d-block w-100" alt="...">
              </div>
              <div class="carousel-item">
-               <img src="SLIDER IMGES/5.jpg"d-block w-100" alt="...">
+               <img src="SLIDER IMGES/5.jpg" class="d-block w-100" alt="...">
              </div>
             
           </div>
