--- a/flavourtea.html
+++ b/flavourtea.html
@@ -143,7 +143,7 @@
            <img src="images/gingertea.png" id="card-img-top" class="card-img-top" alt="...">
             <div class="card-body">
               
-               <h5 class="item-name">GinegrTea&nbsp;(100gm)</p>
+               <h5 class="item-name">Ginger Tea&nbsp;(100gm)</p>
                <h5 class="price">&nbsp;&#8377;&nbsp;75.00</h5>
      
              </div>
