--- a/dryfruits.html
+++ b/dryfruits.html
@@ -136,7 +136,7 @@
            <img src="images/raisins.jpg" id="card-img-top" class="card-img-top" alt="...">
             <div class="card-body">
               
-              <h5 class="item-name">Grapes(250gm)</h5>
+              <h5 class="item-name">Raisins (250gm)</h5>
               <h5 class="price"><s style="color:gray">&#8377;110.00 </s>&nbsp;&#8377;&nbsp;80.00</h5>
              </div>
         </div>
