--- a/dryfruits.html
+++ b/dryfruits.html
@@ -147,7 +147,7 @@
            <img src="images/blkgrapes.jpg" id="card-img-top" class="card-img-top" alt="...">
             <div class="card-body">
             
-              <h5 class="item-name">Black-grapes(250gm)</h5>
+              <h5 class="item-name">Black-Raisins(250gm)</h5>
               <h5 class="price"><s style="color:gray">&#8377;125.00 </s>&nbsp;&#8377;&nbsp;100.00</h5>
      
              </div>
