--- a/facepack.html
+++ b/facepack.html
@@ -166,7 +166,7 @@
            <img src="images/multanimiti.jpg"  id="card-img-top"class="card-img-top" alt="...">
             <div class="card-body">
              
-              <h5 class="item-name">Multani, Miti&nbsp;(100gm)</p>
+              <h5 class="item-name">Multani, Mitti&nbsp;(100gm)</p>
                 <h5 class="price"><s style="color:gray">&#8377;160.00 </s>&nbsp;&#8377;&nbsp;110.00</h5>
      
              </div>
