--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
     <h2 class="contact-heading pl-3">contact</h2>
 
-    <p class="address pl-3" >RESPONSIBLE TOURISM SPICE SHOP  <br>Thekkady road kumily 685509 <br>Kerala ,India</p>
+    <p class="address pl-3" >RESPONSIBLE TOURISM SPICE SHOP  <br>Thekkady road Kumily 685509 <br>Kerala ,India</p>
     <i class="fas fa-envelope p-3" style="color: rgb(21, 18, 230);"><a href="#" class="phone pl-1" style="text-decoration: none;">spicemarketthekkady@gmail.com</a></i><br>
     <i class="fab fa-whatsapp p-3" style="color: rgb(68, 133, 4);" ><a href="#" class="phone pl-1" style="text-decoration: none;font-weight: bold;">9633277608</a></i><br>
     <i class="fas fa-phone-alt p-3" style="color: rgb(16, 77, 246);"><a href="#" class="phone pl-1" style="text-decoration: none;">9495773893</a></i><br>
