--- a/whitepepper.html
+++ b/whitepepper.html
@@ -130,7 +130,7 @@
  <div class="conatiner">
    <h2 class="contact-heading pl-5" style="font-size: 20px;">contact</h2>
 
-   <p class="address pl-5" style="font-size: 10px;" >RESPONSIBLE TOURISM SPICE SHOP  <br>Thekkady road kumily 685509 <br>Kerala ,India</p>
+   <p class="address pl-5" style="font-size: 10px;" >RESPONSIBLE TOURISM SPICE SHOP  <br>Thekkady road Kumily 685509 <br>Kerala ,India</p>
    <i class="fas fa-envelope pl-5" style="color: rgb(107, 107, 107);"><a href="#" class="phone pl-1" style="text-decoration: none;color:rgb(119, 119, 119)">spicemarketthekkady@gmail.com</a></i><br>
    <i class="fab fa-whatsapp pl-5" style="color: rgb(68, 133, 4);" ><a href="#" class="phone pl-1" style="text-decoration: none;font-weight: bold;color:rgb(63, 63, 63)"">9633277608</a></i><br>
    <i class="fas fa-phone-alt pl-5" style="color: rgb(52, 52, 53);"><a href="#" class="phone pl-1" style="text-decoration: none;color:rgb(65, 65, 65)"">9495773893</a></i><br>
