--- a/ayurvedic-oils.html
+++ b/ayurvedic-oils.html
@@ -80,7 +80,7 @@
 <div class="container border mt-2 p-2">
 <a href="artroil.html"><input type="button" class="spice-name" id="spice-btn" value="Pain-Massage oil" name=""></a>
 <a href="neelni.html"><input type="button" class="spice-name" id="spice-btn" value="Hair-Massage oil" name=""></a>
-<a href="brami.html"><input type="button" class="spice-name" id="spice-btn" value="Haid-Massage oil" name=""></a>
+<a href="brami.html"><input type="button" class="spice-name" id="spice-btn" value="Head-Massage oil" name=""></a>
 <a href="raksh.html"><input type="button" class="spice-name" id="spice-btn" value="Body-Massage oil" name=""></a>
 
 
