--- a/chocolates.html
+++ b/chocolates.html
@@ -113,7 +113,7 @@
            <img src="images/chocolates.png"  id="card-img-top" class="card-img-top" alt="...">
             <div class="card-body">
               
-              <h5 class="item-name">Choclates&nbsp;(250gm)</p>
+              <h5 class="item-name">Chocolates&nbsp;(250gm)</p>
               <h5 class="price"><s style="color:gray">&#8377;160.00 </s>&nbsp;&#8377;&nbsp;100.00</h5>
      
              </div>
